--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@svgr/webpack": "^6.3.0",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.20.0",
