--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@svgr/webpack": "^6.3.0",
     "axios": "^0.27.2",
-    "jotai": "^1.7.6",
+    "jotai": "^1.7.7",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
