--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.3.0",
+    "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "jotai": "^1.7.7",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.34.0"
+    "react-hook-form": "^7.34.0",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
